Fix for logo falling down on tablets.

--- a/style/_functions.styl
+++ b/style/_functions.styl
@@ -3,6 +3,7 @@ image-container(halign = left, valign = top, width = 100%) {
 		text-align halign
 	}
 	line-height 1
+	white-space nowrap
 
 	img, video {
 		max-width width == auto ? none : width
